--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,15 +5,14 @@ FROM --platform=$BUILDPLATFORM python:3.13-slim AS builder
 WORKDIR /app
 
 RUN apt-get update && \
-    apt-get install -y spim && \
-    apt-get install -y bubblewrap && \
-    rm -rf /var/lib/apt/lists/*
+    apt-get install -y spim bubblewrap && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt /app
 RUN --mount=type=cache,target=/root/.cache/pip \
     pip3 install -r requirements.txt
 
 COPY . .
+COPY .env .env
 
-ENTRYPOINT ["python3"]
-CMD ["app.py"]
+CMD ["python3", "app.py"]
