--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -13,5 +13,6 @@ RUN --mount=type=cache,target=/root/.cache/pip \
     pip3 install -r requirements.txt
 
 COPY . .
+COPY .env .env
 
 CMD ["python3", "app.py"]
